# NEUROCAD

./: .gitignore  DEV_SETUP.md  InitGui.py  LICENSE  README.md  benchmark_results.json  debug_heights.py  debug_layout.py  pyproject.toml  test_adaptive_growth.py
.claude/: settings.json
MagicMock/mock.ConfigGet()/4470148752/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4477769680/neurocad/: config.json
MagicMock/mock.ConfigGet()/4486184912/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4504298576/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4541591504/neurocad/: config.json
MagicMock/mock.ConfigGet()/4542860304/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4550563088/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4550622544/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4550892304/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4551064720/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4551266064/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4553614352/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4559301456/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4559720336/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4559734160/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4559742608/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4560434448/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4562173200/neurocad/logs/: llm-audit.jsonl
MagicMock/mock.ConfigGet()/4562530896/neurocad/logs/: llm-audit.jsonl
doc/: ARCH.md  PRD.md  RELEASE_NOTES.md  SPRINT_1.md  SPRINT_1_PLAN.md  SPRINT_2.md  SPRINT_2_PLAN.md  SPRINT_3.md  SPRINT_3_PLAN.md  SPRINT_PLANS.md  V1_LLM_REFERENCE.md  V1_SYSTEM_PROMPT.txt
neurocad/: Init.py  InitGui.py  NEUROCAD  __init__.py  package.xml  workbench.py
neurocad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neurocad/config/: __init__.py  config.py  defaults.py  key_storage.py
neurocad/core/: __init__.py  active_document.py  agent.py  agent_v2.py  audit.py  audit_db.py  code_extractor.py  context.py  contract_verifier.py  debug.py  executor.py  exporter.py  features.py  history.py  intent.py  message.py  prompt.py  prompt_v2.py  response_parser.py  validator.py  worker.py  worker_v2.py
neurocad/llm/: __init__.py  anthropic.py  base.py  models.py  openai.py  registry.py
neurocad/tests/: __init__.py  test_config.py  test_context.py  test_history.py
neurocad/ui/: __init__.py  compat.py  panel.py  settings.py  widgets.py
scripts/: audit_migrate.py  audit_state.py  dogfood_check.py  headless_dogfood.py  v2_observability.py
tests/: benchmark.py  conftest.py  test_active_document.py  test_adapters.py  test_agent.py  test_agent_v2.py  test_audit.py  test_code_extractor.py  test_compat.py  test_config.py  test_context.py  test_dogfood_check.py  test_executor.py  test_exporter.py  test_history.py  test_key_storage.py  test_models.py  test_panel.py  test_prompt_recipe.py  test_response_parser.py  test_settings.py  test_ui.py  test_validator.py  test_workbench.py  test_worker.py
tests/manual/: NeuroCad Manual Benchmark Log.md  NeuroCad Manual Smoke + Capability Test Log.md
(+50 files in other folders)
