[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocad"
version = "0.1.0"
description = "AI-powered CAD assistant for FreeCAD"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "NeuroCad Team", email = "team@neurocad.dev" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurocad*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pyflakes, pycodestyle
    "I",  # isort
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = [
    "no-untyped-def",
    "type-arg",
    "valid-type",
    "misc",
    "call-overload",
    "no-untyped-call",
]