[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocad"
version = "0.1.0"
description = "AI‑powered CAD assistant for FreeCAD"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NeuroCad Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: CAD",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/neurocad/neurocad"
Source = "https://github.com/neurocad/neurocad"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurocad*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "F", "W", "I",   # default flake8 errors, warnings, import order
    "B",                  # flake8-bugbear
    "C4",                 # flake8-comprehensions
    "SIM",                # flake8-simplify
    "UP",                 # pyupgrade
    "YTT",                # flake8-2020
]
ignore = [
    "B008",  # mutable default argument (common in dataclasses)
    "B009",  # getattr with constant default (used in FreeCAD compatibility)
    "SIM105", # suppress-try-except-raise (used for re-raise)
]

[tool.ruff.per-file-ignores]
"neurocad/ui/compat.py" = ["F401"]  # unused imports (shim exports)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"